mobile menu,search fix and faculty text alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -202,6 +202,7 @@ button[disabled] {
 .carouselTexts .page-title {
   position: relative;
   max-width: none;
+  border-top-right-radius: 0;
   border-left: 4px solid #e45424;
   padding: auto;
   padding: 20px;
@@ -393,6 +394,44 @@ button[disabled] {
   padding: 5px;
 }
 
-.programfaculty{
+.programfaculty {
   border-radius: 50%;
+}
+
+.mob-modal .accordion-title {
+  padding: 0;
+  display: flex;
+  align-items: center;
+  height: 50px;
+}
+
+.mob-modal a {
+  width: 80%;
+  text-align: left;
+  padding-left: 1rem;
+}
+
+.mob-modal .mob-modal-menu {
+  background: rgb(136, 39, 39);
+  width: 20%;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.mob-modal .accordion-content{
+  background-color: white;
+  padding: 0;
+}
+
+.mob-modal .accordion-content a{
+  text-transform: capitalize;
+  width: 100%;
+}
+
+.mob-modal .accordion-content div{
+  width: 100%;
+  border-bottom: 1px solid;
+  padding: 10px;
 }
